CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(pid)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_STANDARD 11)

ADD_LIBRARY(pid pid.c pid.h pid.cc)

IF (ENABLE_TESTS)
	FIND_PACKAGE(GTest REQUIRED)
	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
	ADD_EXECUTABLE(tests tests.cc)
	TARGET_LINK_LIBRARIES(tests ${GTEST_BOTH_LIBRARIES} pid)
	ENABLE_TESTING()
	ADD_TEST(NAME PID_Controller_Test COMMAND tests)
ENDIF ()
