CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(pid)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_STANDARD 11)

ADD_LIBRARY(pid pid.c pid.h pid.cc)

OPTION(CODE_COVERAGE "Enable coverage reporting." OFF)
OPTION(BUILD_TESTING "Build the tests." ON)

IF (CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
	ADD_DEFINITIONS(-fprofile-arcs -ftest-coverage)
	ADD_LINK_OPTIONS(--coverage)
ENDIF ()

IF (BUILD_TESTING)
	FIND_PACKAGE(GTest REQUIRED)
	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
	ADD_EXECUTABLE(tests tests.cc)
	TARGET_LINK_LIBRARIES(tests ${GTEST_BOTH_LIBRARIES} pid)
	ENABLE_TESTING()
	ADD_TEST(NAME PID_Controller_Test COMMAND tests)
ENDIF ()
